# genaiplay

langchain-edenmarco-udemy-ws/chat-client-llm/: README.md  chat-client-function-tool.py  chat-client-react-prompt.py  pyproject.toml
langchain-edenmarco-udemy-ws/chat-client-llm/chat_client_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
langchain-edenmarco-udemy-ws/langchain-agentic/: README.md  agentic_create_agent.py  agentic_function_call.py  pyproject.toml
langchain-edenmarco-udemy-ws/langchain-mcp/: README.md  mcp_client.py  pyproject.toml
langchain-edenmarco-udemy-ws/langchain-mcp/mcp-server/: math_mcp.py  weather_mcp.py
langchain-edenmarco-udemy-ws/langgraph-agentic/: main.py  nodes.py  pyproject.toml  react.py
